--- a/okta-hosted-login/package.json
+++ b/okta-hosted-login/package.json
@@ -5,15 +5,18 @@
   "dependencies": {
     "@okta/okta-auth-js": "^4.8.0",
     "@okta/okta-react": "^5.1.1",
+    "chartjs-node-canvas": "^3.2.0",
     "colors": "^1.4.0",
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0",
     "react": "^17.0.1",
+    "react-chartjs-2": "^3.0.4",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
     "react-pro-sidebar": "^0.6.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
+    "reactstrap": "^8.9.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
     "text-encoding": "^0.7.0"
